--- a/src/less/navigation/buttons.less
+++ b/src/less/navigation/buttons.less
@@ -4,15 +4,15 @@
   position: absolute;
   top: 50%;
   display: block;
-  appearance: none;
   background: none;
   border: none;
-  padding: 0;
+  padding: 200px 20px;
+  transform: translate(0,-50%);
   cursor: pointer;
   font-size: 15px;
   opacity: 0.5;
   transition: opacity 500ms ease;
-  margin: -1em 2em;
+  //margin: -1em 2em;
 
   svg {
     width: 2em;
@@ -31,7 +31,7 @@
   }
 }
 
-.flipster__button--prev { left: 0; }
-.flipster__button--next { right: 0; }
+.flipster__button--prev { left: 0; padding-right: 150px; }
+.flipster__button--next { right: 0; padding-left: 150px; }
 
 /* @end */
